--- a/Eric.Jansen.Client/Views/Contact/Index.cshtml
+++ b/Eric.Jansen.Client/Views/Contact/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h2>@ViewData["Title"]</h2>
 
-<div class="row">
+<div class="row text-start">
 
     <div class="col">
         <form asp-action="Send" method="post">
