--- a/Eric.Jansen.Client/Views/Shared/Error.cshtml
+++ b/Eric.Jansen.Client/Views/Shared/Error.cshtml
@@ -1,4 +1,6 @@
-﻿@model ErrorViewModel
+﻿@using Eric.Jansen.Application.Models
+
+@model Eric.Jansen.Application.Models.ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
