--- a/Eric.Jansen.Client/Views/Shared/_Layout.cshtml
+++ b/Eric.Jansen.Client/Views/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
                 <partial name="_GdprMessage" />
 
                 <header>
-                    <h1 class="display-3 py-4"><a href="/" alt="Eric Jansen">Eric Jansen</a></h1>
+                    <partial name="_Header" />
                 </header>
 
-                <div class="container">
+                <div class="container mx-auto">
                     @RenderBody()
                 </div>
 
