--- a/Eric.Jansen.Client/Views/_ViewImports.cshtml
+++ b/Eric.Jansen.Client/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using EricJansen.Client
-@using EricJansen.Client.Models
+﻿@using Eric.Jansen.Client
+@using Eric.Jansen.Application.Models
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
