--- a/Eric.Jansen.Client/Views/Shared/_Layout.cshtml
+++ b/Eric.Jansen.Client/Views/Shared/_Layout.cshtml
@@ -19,25 +19,19 @@
 
             <div class="content mb-4">
 
-                <partial name="_GdprMessage" />
+                <partial name="_GdprConsent" />
 
-                <header>
+                <div class="container">
+
                     <partial name="_Header" />
-                </header>
 
-                <div class="container mx-auto">
                     @RenderBody()
+
                 </div>
 
             </div>
 
-            <footer class="footer pt-3">
-                <p>&copy; @DateTime.UtcNow.Year - 
-                    <a href="/" title="Eric Jansen">Eric Jansen</a> - 
-                    <a href="contact" title="Drop me a line">Drop me a line</a> -
-                    <a href="privacy" title="Privacy policy">Privacy Policy</a>
-                </p>
-            </footer>
+            <partial name="_Footer" />
 
         </div>
 
@@ -46,8 +40,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
         <script src="~/js/js.cookie.min.js" asp-append-version="true"></script>
         <script src="~/js/ericjansen.js" asp-append-version="true"></script>
-
-        @await RenderSectionAsync("Scripts", required: false)
 
     </body>
 
