--- a/Eric.Jansen.Client/wwwroot/css/ericjansen.css
+++ b/Eric.Jansen.Client/wwwroot/css/ericjansen.css
@@ -17,22 +17,23 @@ html, body {
 }
 
 header {
-    text-align: center;
-    padding-bottom: 1rem;
-
+    text-align: left;
+    padding: 3rem 0;
 }
     header > h1{
+        font-size: larger;
         padding-top: 1rem;
         padding-bottom: 0;
         margin-bottom: 0;
     }
-    header > h1 > a, footer > p > a{
+    header h1 > a, footer > p > a{
         background-color: inherit;
         color: inherit;
         text-decoration: none;
         font-weight: inherit;
     }
     header .aka {
+        color: #b0b0b0;
         font-size: calc(0.6rem + 0.5vw);
         font-weight: lighter;
     }
