--- a/Eric.Jansen.Client/wwwroot/css/ericjansen.css
+++ b/Eric.Jansen.Client/wwwroot/css/ericjansen.css
@@ -57,6 +57,14 @@ a {
     color: inherit;
 }
 
+.field-validation-error {
+    margin-top: 1rem;
+    background-color: rgba(204,0,0,0.9);
+    border-radius: 0.375em;
+    padding: 0.2rem 0.5rem;
+    line-height: 2.5rem;
+}
+
 .binary {
     font-family: Courier New, Courier, monospace;
     font-size: 0.7rem;
