--- a/Eric.Jansen.Client/Views/Home/Index.cshtml
+++ b/Eric.Jansen.Client/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
 
     <div class="row justify-content-center my-3">
         <div class="col-10 col-sm-8 col-md-7 col-lg-6 col-xl-5 col-xxl-4">
-            <i><p class="py-3 row justify-content-center">Can you find out what my passion is?</p></i>
+            <i><p class="py-3 row justify-content-center text-center">Can you find out what my passion is?</p></i>
             <div class="my-2 p-2 text-center binary rounded-4 display-1">
                 <span class="solid">01010011 01101111 01101100 01101001 01100100</span>
                 <span class="coding"> 01000011 01101111 01100100 01101001 01101110 01100111</span>
