Refactored, created background services for the contact form handling.

--- a/Eric.Jansen.Client/Views/Shared/_Header.cshtml
+++ b/Eric.Jansen.Client/Views/Shared/_Header.cshtml
@@ -9,8 +9,9 @@
             <h1 class="display-1"><a href="/" alt="@tenant.Title">@tenant.Title</a></h1>
         </div>
 
-        <div class="align-self-center ms-4">
-            <a class="btn btn-outline-secondary rounded-pill" href="/contact" role="button">Drop me a line</a>
+        <div class="navigation align-self-center ms-4">
+            <a class="" href="/" role="button">Home</a>
+            <a class="" href="/contact" role="button">Drop me a line</a>
         </div>
     </div>
 
