TenantProvider is all up and running.

--- a/Eric.Jansen.Client/Views/Shared/_Footer.cshtml
+++ b/Eric.Jansen.Client/Views/Shared/_Footer.cshtml
@@ -2,7 +2,7 @@
 
     <p>
         &copy; @DateTime.UtcNow.Year -
-        <a href="/" title="Eric Jansen">Eric Jansen</a> -
+        <a href="/" title="@_tenantProvider.Tenant?.Name">@_tenantProvider.Tenant?.Name</a> -
         <a href="/privacy" title="Privacy policy">Privacy Policy</a>
     </p>
 
