--- a/Eric.Jansen.Client/Views/_ViewImports.cshtml
+++ b/Eric.Jansen.Client/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Eric.Jansen.Client
 @using Eric.Jansen.Application.Models
+@using Eric.Jansen.Application.Contracts
+
+@inject ITenantProvider _tenantProvider
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
