--- a/Eric.Jansen.Client/Views/Home/Privacy.cshtml
+++ b/Eric.Jansen.Client/Views/Home/Privacy.cshtml
@@ -5,7 +5,7 @@
 <h2>@ViewData["Title"]</h2>
 
 <p>
-    I, Eric Jansen, am committed to protecting the privacy of visitors to my website, <a href="/" title="Eric Jansen">ericjansen.com</a>. This Privacy Policy outlines the types of information I collect from visitors to my website, how I use that information, and your rights regarding your personal data. This Privacy Policy is in accordance with the EU General Data Protection Regulation (GDPR).
+    I, @_tenantProvider.Tenant?.Name, am committed to protecting the privacy of visitors to my website, <a href="/" title="@_tenantProvider.Tenant?.Name">@_tenantProvider.Tenant?.HostName</a>. This Privacy Policy outlines the types of information I collect from visitors to my website, how I use that information, and your rights regarding your personal data. This Privacy Policy is in accordance with the EU General Data Protection Regulation (GDPR).
 </p>
 
 <article>
@@ -34,5 +34,5 @@
         I reserve the right to update or change this Privacy Policy at any time. Any changes will be effective immediately upon posting the revised Privacy Policy on the website. I encourage you to review this Privacy Policy periodically for any updates or changes.
     </p>
     <p>Thank you visiting my website.</p>
-    <p>Eric Jansen</p>
+    <p>@_tenantProvider.Tenant?.ShortName</p>
 </article>
