--- a/Eric.Jansen.Client/Views/Shared/_Layout.cshtml
+++ b/Eric.Jansen.Client/Views/Shared/_Layout.cshtml
@@ -5,10 +5,10 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="format-detection" content="telephone=no">
-        <meta name="title" content="Eric Jansen - Personal Website">
+        <meta name="title" content="@_tenantProvider.Tenant?.Name - Personal Website">
         <meta name="description" content="Eric Jansen | Rixke | Personal Website | My Passion | Nothing much to see">
         <meta name="author" content="Eric Jansen">
-        <title>@ViewData["Title"] - Eric Jansen</title>
+        <title>@ViewData["Title"] - @_tenantProvider.Tenant?.Name</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="~/css/ericjansen.css" asp-append-version="true" />
     </head>
