Changed some content and fixed an issue on result pages after filling out contact form.

--- a/Eric.Jansen.Client/Views/Contact/Error.cshtml
+++ b/Eric.Jansen.Client/Views/Contact/Error.cshtml
@@ -28,4 +28,4 @@
     I'm sorry, but you'll have to try again <a href="/contact" title="Contact">here</a>.
 </p>
 <p>Ciao,</p>
-<p>Eric</p>
+<p>@_tenantProvider.Tenant?.ShortName</p>
