--- a/Eric.Jansen.Client/Views/Contact/Success.cshtml
+++ b/Eric.Jansen.Client/Views/Contact/Success.cshtml
@@ -16,4 +16,4 @@
 
 <p>Thank you for reaching out to me.  I'll get back to you from the moment I read your message.</p>
 <p>Ciao,</p>
-<p>Eric</p>
+<p>@_tenantProvider.Tenant?.ShortName</p>
