Added offcanvas menu on the top right.

--- a/Eric.Jansen.Client/Views/Shared/_Header.cshtml
+++ b/Eric.Jansen.Client/Views/Shared/_Header.cshtml
@@ -1,14 +1,29 @@
 ﻿<header>
 
-    <div class="d-flex justify-content-between">
-        <div class="align-self-center">
-            <h1 class="display-1"><a href="/" alt="@_tenantProvider.Tenant?.Name">@_tenantProvider.Tenant?.Name</a></h1>
+    <nav class="navbar navbar-dark bg-dark">
+        <h1 class="display-1"><a href="/" alt="@_tenantProvider.Tenant?.Name">@_tenantProvider.Tenant?.Name</a></h1>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas w-25 offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/contact">Drop me a line</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/private">Privacy policy</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-
-        <div class="navigation align-self-center ms-4">
-            <a class="" href="/" role="button">Home</a>
-            <a class="" href="/contact" role="button">Drop me a line</a>
-        </div>
-    </div>
+    </nav>
 
 </header>
