--- a/Eric.Jansen.Client/Views/Home/Index.cshtml
+++ b/Eric.Jansen.Client/Views/Home/Index.cshtml
@@ -2,34 +2,29 @@
     ViewData["Title"] = "Home";
 }
 
-<div class="container">
-
-    <div class="row justify-content-center">
-        <div class="col col-8 col-sm-6 col-md-5 col-lg-4 col-xl-3">
-            <div class="position-relative">
-                <img src="~/img/face_headphones.jpg" class="img-fluid rounded-circle shadow-sm" alt="Eric Jansen" />
-                <div class="position-absolute top-50 start-50 translate-middle text-center text display-2">
-                    <span class="solid invisible">Solid</span>
-                    <span class="coding invisible">Coding</span>
-                    <span class="is invisible">Is</span>
-                    <span class="my invisible">My</span>
-                    <span class="passion invisible">Passion</span>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row justify-content-center my-3">
-        <div class="col-10 col-sm-8 col-md-7 col-lg-6 col-xl-5 col-xxl-4">
-            <i><p class="py-3 row justify-content-center text-center">Can you find out what my passion is?</p></i>
-            <div class="my-2 p-2 text-center binary rounded-4 display-1">
-                <span class="solid">01010011 01101111 01101100 01101001 01100100</span>
-                <span class="coding"> 01000011 01101111 01100100 01101001 01101110 01100111</span>
-                <span class="is">01001001 01110011</span>
-                <span class="my">01001101 01111001</span>
-                <span class="passion">01010000 01100001 01110011 01110011 01101001 01101111 01101110</span>
-            </div>
-        </div>
-    </div>
-
+<div class="text-center mb-5">
+    <img src="~/img/face_headphones.jpg" class="img-fluid rounded-circle shadow-sm p-5" alt="Eric Jansen" />
 </div>
+
+<h2>Hello,</h2>
+
+<article>
+    <p>
+        I'm a resident of the beautiful country of Belgium, and this
+        website serves as a minimalistic online presence for me.
+    </p>
+    <p>
+        While there
+        isn't much to see here, and this website isn't the most fancy out there,
+        feel free to explore and get a glimpse into my digital corner.
+    </p>
+    <p>
+        This site is intentionally kept discreet to maintain privacy, but
+        I appreciate your visit nonetheless. If you have any inquiries or just
+        want to say hello, you can drop me a line <a href="/contact" title="Drop me aline">here</a>.
+    </p>
+    <p>
+        Thank you for stopping by!
+    </p>
+</article>
+
