--- a/Eric.Jansen.Client/wwwroot/css/ericjansen.css
+++ b/Eric.Jansen.Client/wwwroot/css/ericjansen.css
@@ -11,6 +11,7 @@ html, body {
     flex-direction: column;
     min-height: 100%;
     justify-content: center;
+    line-height: 2rem;
 }
 
 .content {
