--- a/Eric.Jansen.Client/Views/Home/Index.cshtml
+++ b/Eric.Jansen.Client/Views/Home/Index.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "Home";
 }
 
-<div class="text-center mb-5">
-    <img src="~/img/face_headphones.jpg" class="img-fluid rounded-circle shadow-sm p-5" alt="Eric Jansen" />
+<div class="text-center">
+    <img src="~/img/face_headphones.jpg" class="img-fluid rounded-circle mb-4" alt="Eric Jansen" />
 </div>
 
 <h2>Hello,</h2>
