--- a/Eric.Jansen.Client/wwwroot/css/ericjansen.css
+++ b/Eric.Jansen.Client/wwwroot/css/ericjansen.css
@@ -11,7 +11,6 @@ html, body {
     flex-direction: column;
     min-height: 100%;
     justify-content: center;
-    line-height: 2rem;
 }
 
 .content {
@@ -20,20 +19,17 @@ html, body {
 
 header {
     text-align: left;
-    padding: 3rem 0;
 }
 
-h1 {
+header h1 {
     font-size: larger;
     padding-bottom: 0;
     margin-bottom: 0;
 }
-    h1 > a {
-        background-color: inherit;
-        color: inherit;
+    header h1 > a {
         text-decoration: none;
     }
-    h1 > a:hover {
+    header h1 > a:hover {
         text-decoration: none;
     }
 
