Fixed issues #34 and #36 .

--- a/Eric.Jansen.Client/Views/Contact/Index.cshtml
+++ b/Eric.Jansen.Client/Views/Contact/Index.cshtml
@@ -29,7 +29,7 @@
                 <textarea asp-for="Message" class="form-control" rows="6"></textarea>
                 <span asp-validation-for="Message" class="text-white"></span>
             </div>
-            <button type="submit" class="btn btn-primary rounded-pill">Get in touch</button>
+            <button type="submit" class="btn btn-lg btn-primary rounded-pill mt-2">Get in touch</button>
         </form>
     </div>
 
