--- a/Eric.Jansen.Client/Views/Home/Index.cshtml
+++ b/Eric.Jansen.Client/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <img src="~/img/face_headphones.jpg" class="img-fluid rounded-circle mb-4" alt="Eric Jansen" />
+    <img src="~/img/face_headphones.jpg" class="rounded-circle mb-4" alt="Eric Jansen" />
 </div>
 
 <h2>Hello,</h2>
