--- a/Eric.Jansen.Client/Views/Home/Privacy.cshtml
+++ b/Eric.Jansen.Client/Views/Home/Privacy.cshtml
@@ -11,7 +11,7 @@
 <article>
     <h3>1. Information I Collect</h3>
     <p>
-        When you visit my website, I automatically collect a little bit of information about your device, including information about your web browser, IP address, time zone, but, none of the cookies that are installed on your device. Additionally, as you browse the site, I collect information about the individual web pages, you view, what websites or search terms referred you to the site, and information about how you interact with the site.
+        When you visit my website, I automatically collect a little bit of information about your device, including information about your web browser, IP address, but, none of the cookies that are installed on your device. Additionally, as you browse the site, I collect information about the individual web pages, you view, what websites or search terms referred you to the site, and information about how you interact with the site.
     </p>
     <h3>2. Use of Cookies</h3>
     <p>
