--- a/Eric.Jansen.Client/Views/Shared/_Header.cshtml
+++ b/Eric.Jansen.Client/Views/Shared/_Header.cshtml
@@ -21,13 +21,13 @@
                 <div class="offcanvas-body mx-3">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/">Home</a>
+                            <a class="nav-link" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/contact">Drop me a line</a>
+                            <a class="nav-link" aria-current="page" href="/contact">Drop me a line</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/privacy">Privacy policy</a>
+                            <a class="nav-link" aria-current="page" href="/privacy">Privacy policy</a>
                         </li>
                     </ul>
                 </div>
