--- a/Eric.Jansen.Client/Views/Error/404.cshtml
+++ b/Eric.Jansen.Client/Views/Error/404.cshtml
@@ -1,13 +1,26 @@
 ﻿@{
-    ViewData["Title"] = "Error";
+    ViewData["Title"] = "Page not found (404)";
 }
 
-<div class="container">
-
-    <h1>Error 404</h1>
-
-    <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" fill="currentColor" class="bi bi-question-square" viewBox="0 0 16 16">
-        <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z" />
-        <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286m1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94" />
+<div class="mb-5 text-center">
+    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 30 30">
+        <path fill="#f78f8f" d="M15,28.5C7.556,28.5,1.5,22.444,1.5,15S7.556,1.5,15,1.5S28.5,7.556,28.5,15S22.444,28.5,15,28.5z"></path>
+        <path fill="#c74343" d="M15,2c7.168,0,13,5.832,13,13s-5.832,13-13,13S2,22.168,2,15S7.832,2,15,2 M15,1 C7.268,1,1,7.268,1,15s6.268,14,14,14s14-6.268,14-14S22.732,1,15,1L15,1z"></path>
+        <path fill="#fff" d="M14 8H16V22H14z" transform="rotate(134.999 15 15)"></path>
+        <path fill="#fff" d="M14 8H16V22H14z" transform="rotate(-134.999 15 15)"></path>
     </svg>
 </div>
+
+<h2>@ViewData["Title"]</h2>
+
+<p>
+    Oops, I couldn't find the page you requested. Most likely, this is
+    caused by a page that has been removed or a typo that slipped into the code.
+</p>
+<p>
+    This should not be happening of course. I apologize.
+</p>
+<p>
+    Please return to the <a href="/" title="Home">home page</a>.
+</p>
+<p>@_tenantProvider.Tenant?.ShortName</p>
