--- a/Eric.Jansen.Client/Views/Home/Index.cshtml
+++ b/Eric.Jansen.Client/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home";
 }
 
-<div class="text-center">
+<div class="me text-center">
     <img src="~/img/face_headphones.jpg" class="rounded-circle mb-4" alt="Eric Jansen" />
 </div>
 
