--- a/Eric.Jansen.Client/wwwroot/css/ericjansen.css
+++ b/Eric.Jansen.Client/wwwroot/css/ericjansen.css
@@ -17,6 +17,15 @@ html, body {
     flex: 1;
 }
 
+a {
+    color: #f8f9fa;
+    font-weight: bolder;
+    text-decoration: none;
+}
+    a:hover{
+        color: deeppink;
+    }
+
 header {
     text-align: left;
 }
@@ -37,6 +46,14 @@ header h1 {
     header a{
         text-decoration: none;
     }
+
+.nav-link {
+    color: #f8f9fa;
+}
+.nav-item a:hover {
+    color: deeppink;
+}
+
 h2 {
     padding: 0 0 1.4rem 0;
     font-size: 1.8rem;
@@ -49,22 +66,17 @@ h3 {
     padding: 1.2rem 0;
 }
 
-a {
-    color: inherit;
-    text-decoration: underline;
-}
-
-.nav-link {
-    color: #ffffff;
-    text-decoration: none;
-}
-
 .field-validation-error {
     background-color: #cc0000;
     background-color: rgba(204,0,0,0.9);
     border-radius: 0.375em;
     padding: 0.2rem 0.5rem;
     line-height: 2.4rem;
+}
+
+img .me{
+    max-width: 5%;
+    border: 1px solid red;
 }
 
 .binary {
