Updated NuGet and small design updates.

--- a/Eric.Jansen.Client/Views/Home/Index.cshtml
+++ b/Eric.Jansen.Client/Views/Home/Index.cshtml
@@ -2,9 +2,9 @@
     ViewData["Title"] = "Home";
 }
 
-<div class="me text-center">
-    <img src="~/img/face_headphones.jpg" class="rounded-circle mb-4" alt="Eric Jansen" />
-</div>
+
+<img src="~/img/face_headphones.jpg" width="250px" width="250px" class="img-fluid mx-auto d-block rounded-circle mb-4" alt="Eric Jansen" />
+
 
 <h2>Hello,</h2>
 
