Changed content on index page.

--- a/Eric.Jansen.Client/Views/Home/Index.cshtml
+++ b/Eric.Jansen.Client/Views/Home/Index.cshtml
@@ -15,7 +15,8 @@
     </p>
     <p>
         While there
-        isn't much to see here, and this website isn't the most fancy out there,
+        isn't much to see here, and this website isn't the most fancy out there 
+        - that's because I like simplicity - 
         feel free to explore and get a glimpse into my digital corner.
     </p>
     <p>
