Optimized for SEO.

--- a/Eric.Jansen.Client/Views/Contact/Error.cshtml
+++ b/Eric.Jansen.Client/Views/Contact/Error.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = $"Hi {Model.Name}";
+    ViewData["MetaTitle"] = "Error while handling your request";
 }
 
 <div class="mb-5 text-center">
