--- a/Eric.Jansen.Client/Views/Contact/Index.cshtml
+++ b/Eric.Jansen.Client/Views/Contact/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model ContactViewModel
 
 @{
-    ViewData["Title"] = "Drop me a line";
+    ViewData["Title"] = "Contact";
+    ViewData["MetaTitle"] = "Contact";
 }
 
 <h2>@ViewData["Title"]</h2>
