--- a/Eric.Jansen.Client/Views/Error/404.cshtml
+++ b/Eric.Jansen.Client/Views/Error/404.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Page not found (404)";
+    ViewData["MetaTitle"] = "Page not found";
 }
 
 <div class="mb-5 text-center">
