--- a/Eric.Jansen.Client/Views/Error/500.cshtml
+++ b/Eric.Jansen.Client/Views/Error/500.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Serious Problem (500)";
+    ViewData["MetaTitle"] = "Serious Problem";
 }
 
 <div class="mb-5 text-center">
