--- a/Eric.Jansen.Client/Views/Home/Index.cshtml
+++ b/Eric.Jansen.Client/Views/Home/Index.cshtml
@@ -1,16 +1,15 @@
 ﻿@{
     ViewData["Title"] = "Home";
+    ViewData["MetaTitle"] = "Home";
 }
 
-
 <img src="~/img/face_headphones.jpg" width="250px" width="250px" class="img-fluid mx-auto d-block rounded-circle mb-4" alt="Eric Jansen" />
-
 
 <h2>Hello,</h2>
 
 <article>
     <p>
-        I'm a resident of the beautiful country of Belgium, and this
+        I'm a resident (he/him) of the beautiful country of Belgium, and this
         website serves as a minimalistic online presence for me.
     </p>
     <p>
