--- a/Eric.Jansen.Client/Views/Shared/Error.cshtml
+++ b/Eric.Jansen.Client/Views/Shared/Error.cshtml
@@ -1,8 +1,10 @@
 ﻿@using Eric.Jansen.Application.Models
 
 @model Eric.Jansen.Application.Models.ErrorViewModel
+
 @{
     ViewData["Title"] = "Error";
+    ViewData["MetaTitle"] = "Error";
 }
 
 <h1 class="text-danger">Error.</h1>
