--- a/Eric.Jansen.Client/Views/Shared/_Footer.cshtml
+++ b/Eric.Jansen.Client/Views/Shared/_Footer.cshtml
@@ -3,7 +3,7 @@
     <p>
         &copy; @DateTime.UtcNow.Year -
         <a href="/" title="@_tenantProvider.Tenant?.Name">@_tenantProvider.Tenant?.Name</a> -
-        <a href="/privacy" title="Privacy policy">Privacy Policy</a>
+        <a href="/privacy-policy" title="Privacy policy">Privacy Policy</a>
     </p>
 
 </footer>
