--- a/Eric.Jansen.Client/Views/Shared/_Header.cshtml
+++ b/Eric.Jansen.Client/Views/Shared/_Header.cshtml
@@ -6,7 +6,7 @@
 
         <div class="d-none d-md-block">
             <a class="me-3" aria-current="page" href="/">Home</a>
-            <a aria-current="page" href="/contact">Drop me a line</a>
+            <a aria-current="page" href="/contact">Contact</a>
         </div>
 
         <div class="d-md-none">
@@ -24,10 +24,10 @@
                             <a class="nav-link" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/contact">Drop me a line</a>
+                            <a class="nav-link" aria-current="page" href="/contact">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/privacy">Privacy policy</a>
+                            <a class="nav-link" aria-current="page" href="/privacy-policy">Privacy Policy</a>
                         </li>
                     </ul>
                 </div>
