--- a/Eric.Jansen.Client/Views/Shared/_Layout.cshtml
+++ b/Eric.Jansen.Client/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
         <meta name="author" content="Eric Jansen">
         <meta name="robots" content="follow, index" />
         <title>@ViewData["Title"] - @_tenantProvider.Tenant?.Name</title>
-        <link href="favicon.png" rel="icon">
+        <link href="favicon.ico" rel="icon">
         <link href="apple-touch-icon.png" rel="apple-touch-icon">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="~/css/ericjansen.css" asp-append-version="true" />
