--- a/Eric.Jansen.Client/Views/Error/500.cshtml
+++ b/Eric.Jansen.Client/Views/Error/500.cshtml
@@ -19,7 +19,7 @@
 </p>
 <p>
     Everything has gone into meltdown mode here, with alarms and sirens blaring, so
-    don't sweat it though, a solution on it's way!
+    don't sweat it though, a solution is on it's way!
 </p>
 <p>
     Of course, this should not be happening and I apologize for the inconvenience.
