--- a/Ej.Client/Views/Contact/Index.cshtml
+++ b/Ej.Client/Views/Contact/Index.cshtml
@@ -18,12 +18,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="mb-3">
                 <label asp-for="Name" class="form-label">What is your name?</label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" type="text" class="form-control" />
                 <span asp-validation-for="Name" class="text-white"></span>
             </div>
             <div class="mb-3">
                 <label asp-for="Email" class="form-label">And of course, what is your email?</label>
-                <input asp-for="Email" class="form-control" />
+                <input asp-for="Email" type="email" class="form-control" />
                 <span asp-validation-for="Email" class="text-white"></span>
             </div>
             <div class="mb-3">
