--- a/Ej.Client/Views/Shared/_Header.cshtml
+++ b/Ej.Client/Views/Shared/_Header.cshtml
@@ -1,6 +1,6 @@
-﻿<header class="mb-5">
+﻿<header class="header mb-5">
 
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar">
 
         <h1 class="display-1"><a href="/" alt="@_tenantProvider.Tenant?.Name">@_tenantProvider.Tenant?.Name</a></h1>
 
