--- a/Ej.Client/Views/Shared/_GdprConsent.cshtml
+++ b/Ej.Client/Views/Shared/_GdprConsent.cshtml
@@ -1,15 +1,19 @@
-﻿<div id="gdpr-consent" class="p-4 gdpr-consent alert-dismissable alert-dismissible fade show fixed-bottom" role="alert">
-    <div class="container">
-        <div class="row align-items-center pb-4">
-            <div class="col">
-                This website uses one cookie. By using this website, you agree to our <a href="/privacy-policy">Privacy Policy</a>.
+﻿<section>
+
+    <div id="gdpr-consent" class="p-4 gdpr-consent alert-dismissable alert-dismissible fade show fixed-bottom" role="alert">
+        <div class="container">
+            <div class="row align-items-center pb-4">
+                <div class="col">
+                    This website uses one cookie. By using this website, you agree to our <a href="/privacy-policy">Privacy Policy</a>.
+                </div>
             </div>
-        </div>
-        <div class="row align-items-center">
-            <div class="col">
-                <button id="accept-btn" class="btn btn-primary btn-sm rounded-pill">Accept</button>
-                <button id="reject-btn" class="btn btn-secondary btn-sm ms-2 rounded-pill">Reject</button>
+            <div class="row align-items-center">
+                <div class="col">
+                    <button id="accept-btn" class="btn btn-primary rounded-pill">Accept</button>
+                    <button id="reject-btn" class="btn btn-secondary ms-2 rounded-pill">Reject</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+
+</section>
