--- a/Ej.Client/Views/Shared/_Layout.cshtml
+++ b/Ej.Client/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <link href="favicon.ico" rel="icon">
         <link href="apple-touch-icon.png" rel="apple-touch-icon">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="~/css/ericjansen.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/ericjansen.min.css" asp-append-version="true" />
     </head>
 
     <body>
