Added Google Tag Manager.

--- a/Ej.Client/Views/Shared/_Header.cshtml
+++ b/Ej.Client/Views/Shared/_Header.cshtml
@@ -4,12 +4,12 @@
 
         <h1 class="display-1"><a href="/" alt="@_tenantProvider.Tenant?.Name">@_tenantProvider.Tenant?.Name</a></h1>
 
-        <div class="d-none d-md-block">
+        <div class="d-sm-none d-md-block">
             <a class="me-3" aria-current="page" href="/">Home</a>
             <a aria-current="page" href="/contact">Contact</a>
         </div>
 
-        <div class="d-md-none">
+        <div class="d-none d-sm-block d-md-none">
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
