Fixed issue with navigation bar.

--- a/Ej.Client/Views/Home/Index.cshtml
+++ b/Ej.Client/Views/Home/Index.cshtml
@@ -3,11 +3,12 @@
     ViewData["MetaTitle"] = "Home";
 }
 
-<img src="~/img/face_headphones.jpg" width="250px" width="250px" class="img-fluid mx-auto d-block rounded-circle mb-4" alt="Eric Jansen" />
+<section id="hero">
+    <img src="~/img/face-headphones-400x400.jpg" width="250px" width="250px" class="img-fluid mx-auto d-block rounded-circle mb-4" alt="Eric Jansen" />
+</section>
 
-<h2>Hello,</h2>
-
-<article>
+<section id="about">
+    <h2>Hello,</h2>
     <p>
         I'm a resident (he/him) of the beautiful country of Belgium, and this
         website serves as a minimalistic online presence for me.
@@ -26,5 +27,5 @@
     <p>
         Thank you for stopping by!
     </p>
-</article>
+</section>
 
