--- a/Ej.Client/Views/Shared/_Layout.cshtml
+++ b/Ej.Client/Views/Shared/_Layout.cshtml
@@ -25,10 +25,22 @@
         <meta name="author" content="Eric Jansen">
         <meta name="robots" content="follow, index" />
 
+        <!-- Open Graph tags-->
+@{
+    var ogTags = _tenantProvider.Tenant?.OpenGraphTags ?? [];
+
+    foreach (var ogTag in ogTags)
+    {
+        <meta property="@ogTag.Key" content="@ogTag.Value" />
+    }
+}
+
+        <!-- Title -->
         <title>@ViewData["Title"] - @_tenantProvider.Tenant?.Name</title>
 
-        <link href="favicon.ico" rel="icon">
-        <link href="apple-touch-icon.png" rel="apple-touch-icon">
+        <link rel="icon" href="favicon.ico">
+        <link rel="apple-touch-icon"  href="apple-touch-icon.png">
+
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="~/css/ericjansen.min.css" asp-append-version="true" />
     </head>
@@ -39,17 +51,18 @@
         <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T9HCTPRT" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- End Google Tag Manager (noscript) -->
 
-        <div class="wrapper">
-            <div class="content mb-4">
-                <partial name="_GdprConsent" />
-                <div class="container">
-                    <partial name="_Header" />
-                    <main>
-                        @RenderBody()
-                    </main>
-                </div>
-            </div>
+        <div class="container">
+
+            <partial name="_GdprConsent" />
+
+            <partial name="_Header" />
+
+            <main>
+                @RenderBody()
+            </main>
+
             <partial name="_Footer" />
+
         </div>
 
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
