Added proper title tags to links and proper aria-labels.

--- a/Ej.Client/Views/Home/Index.cshtml
+++ b/Ej.Client/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
     <p>
         This site is intentionally kept discreet to maintain privacy, but
         I appreciate your visit nonetheless. If you have any inquiries or just
-        want to say hello, you can drop me a line <a href="/contact" title="Drop me aline">here</a>.
+        want to say hello, you can drop me a line <a href="/contact" title="Contact">here</a>.
     </p>
     <p>
         Thank you for stopping by!
