--- a/Ej.Client/Views/Shared/_Footer.cshtml
+++ b/Ej.Client/Views/Shared/_Footer.cshtml
@@ -2,8 +2,8 @@
 
     <p>
         &copy; @DateTime.UtcNow.Year -
-        <a href="/" title="@_tenantProvider.Tenant?.Name">@_tenantProvider.Tenant?.Name</a> -
-        <a href="/privacy-policy" title="Privacy policy">Privacy Policy</a>
+        <a href="/" title="@_tenantProvider.Tenant?.Name Home">@_tenantProvider.Tenant?.Name</a> -
+        <a href="/privacy-policy" title="Privacy Policy">Privacy Policy</a>
     </p>
 
 </footer>
