--- a/Ej.Client/Views/Shared/_GdprConsent.cshtml
+++ b/Ej.Client/Views/Shared/_GdprConsent.cshtml
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="row align-items-center pb-4">
                 <div class="col">
-                    This website uses one cookie. By using this website, you agree to our <a href="/privacy-policy">Privacy Policy</a>.
+                    This website uses one cookie. By using this website, you agree to our <a href="/privacy-policy" title="Privacy Policy">Privacy Policy</a>.
                 </div>
             </div>
             <div class="row align-items-center">
