--- a/Ej.Client/Views/Shared/_Header.cshtml
+++ b/Ej.Client/Views/Shared/_Header.cshtml
@@ -2,32 +2,32 @@
 
     <nav class="navbar navbar-dark">
 
-        <h1 class="display-1"><a href="/" alt="@_tenantProvider.Tenant?.Name">@_tenantProvider.Tenant?.Name</a></h1>
+        <h1 class="display-1"><a href="/" alt="@_tenantProvider.Tenant?.Name" title="@_tenantProvider.Tenant?.Name Home">@_tenantProvider.Tenant?.Name</a></h1>
 
         <div class="d-none d-md-block pt-2">
-            <a class="me-3" aria-current="page" href="/">Home</a>
-            <a aria-current="page" href="/contact">Contact</a>
+            <a class="me-3" aria-current="page" href="/" title="Home">Home</a>
+            <a aria-current="page" href="/contact" title="Contact">Contact</a>
         </div>
 
         <div class="d-block d-md-none pt-2">
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Show Menu">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="offcanvas w-auto offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
                 <div class="offcanvas-header align-content-end">
                     <p class="offcanvas-title me-5" id="offcanvasDarkNavbarLabel">&nbsp;</p>
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close" aria-label="Close Menu"></button>
                 </div>
                 <div class="offcanvas-body mx-3">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/">Home</a>
+                            <a class="nav-link" aria-current="page" href="/" title="Home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/contact">Contact</a>
+                            <a class="nav-link" aria-current="page" href="/contact" title="Contact">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/privacy-policy">Privacy Policy</a>
+                            <a class="nav-link" aria-current="page" href="/privacy-policy" title="Privacy Policy">Privacy Policy</a>
                         </li>
                     </ul>
                 </div>
