--- a/Ej.Client/Views/Contact/Index.cshtml
+++ b/Ej.Client/Views/Contact/Index.cshtml
@@ -16,7 +16,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="16" height="16" aria-hidden="true" class="_24ydrq0 _1286nb11m _1286nb12q9 _1286nb11sl _1286nb11vr"><path d="m256 275.6-92.3-92.3c-9.8-9.8-25.6-9.8-35.4 0s-9.8 25.6 0 35.4l110 110c4.9 4.9 11.3 7.3 17.7 7.3s12.8-2.4 17.7-7.3l110-110c9.8-9.8 9.8-25.6 0-35.4s-25.6-9.8-35.4 0z"></path></svg>
 
         <div class="col">
-            <form asp-action="Send" method="post">
+            <form method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="mb-3">
                     <label asp-for="Name" class="form-label">What is your name?</label>
