--- a/Ej.Client/Views/Shared/_Footer.cshtml
+++ b/Ej.Client/Views/Shared/_Footer.cshtml
@@ -1,9 +1,11 @@
+@using System.Globalization;
+
 <footer class="footer pt-5 pb-3">
 
     <p>
         &copy; @DateTime.UtcNow.Year -
-        <a href="/" title="@_tenantProvider.Tenant?.Name Home">@_tenantProvider.Tenant?.Name</a> -
-        <a href="/privacy-policy" title="Privacy Policy">Privacy Policy</a>
+        <a asp-controller="Home" asp-action="Index" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="@_tenantProvider.Tenant?.Name Home">@_tenantProvider.Tenant?.Name</a> - 
+        <a asp-controller="Home" asp-action="Privacy" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="Privacy Policy">Privacy Policy</a>
     </p>
 
 </footer>
