--- a/Ej.Client/Views/Shared/_Header.cshtml
+++ b/Ej.Client/Views/Shared/_Header.cshtml
@@ -1,12 +1,14 @@
-﻿<header class="header mb-5">
+﻿@using System.Globalization;
+
+<header class="header mb-5">
 
     <nav class="navbar navbar-dark">
 
-        <h1 class="display-1"><a href="/" alt="@_tenantProvider.Tenant?.Name" title="@_tenantProvider.Tenant?.Name Home">@_tenantProvider.Tenant?.Name</a></h1>
+        <h1 class="display-1"><a asp-controller="Home" asp-action="Index" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="@_tenantProvider.Tenant?.Name Home">@_tenantProvider.Tenant?.Name</a></h1>
 
         <div class="d-none d-md-block pt-2">
-            <a class="me-3" aria-current="page" href="/" title="Home">Home</a>
-            <a aria-current="page" href="/contact" title="Contact">Contact</a>
+            <a class="me-3" asp-controller="Home" asp-action="Index" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="Home">Home</a>
+            <a asp-controller="Contact" asp-action="Index" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="Contact">Contact</a>
         </div>
 
         <div class="d-block d-md-none pt-2">
@@ -21,13 +23,13 @@
                 <div class="offcanvas-body mx-3">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/" title="Home">Home</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="Home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/contact" title="Contact">Contact</a>
+                            <a class="nav-link" asp-controller="Contact" asp-action="Index" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="Contact">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/privacy-policy" title="Privacy Policy">Privacy Policy</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Privacy" asp-route-culture="@CultureInfo.CurrentCulture.Name" title="Privacy Policy">Privacy Policy</a>
                         </li>
                     </ul>
                 </div>
